--- a/templates/index.html
+++ b/templates/index.html
@@ -18,10 +18,11 @@
                 <input type="password" id="password"><br><br>
                 <button id="enviar"> ENVIAR </button>
 
-                <p> Si aún no tienes cuenta, puedes <a href="/templates/registro.html"> registrarte</a> </p>
+                <p> Si aún no tienes cuenta, puedes <a href="registro.html"> registrarte</a> </p>
             </form> 
     
         </div>
+    
 
         <div id="right">
             <img src="/static/img/frame_edit3.jpg" alt="GRE Logo" id="logo">
