Actualización de Crud

--- a/templates/crud.html
+++ b/templates/crud.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CRUD Usuarios</title>
+    <title> CRUD </title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -11,11 +11,12 @@
         <h1>CRUD Usuarios</h1>
 
         <div id="create-user">
-            <h2>Crear Usuario</h2>
+            <h2> Añadir Usuario </h2>
             <input type="text" id="create-nombre" placeholder="Nombre">
             <input type="text" id="create-apellido" placeholder="Apellido">
-            <input type="text" id="create-usuario" placeholder="Usuario">
-            <input type="password" id="create-password" placeholder="Contraseña">
+            <input type="text" id="create-usuario" placeholder="Tipo de documento">
+            <input type="number" id="create-usuario" placeholder="Numero documento">
+            <input type="number" id="create-password" placeholder="Cel">
             <button id="create-button">Crear</button>
         </div>
 
